<?xml version="1.0" encoding="utf-8"?>
<!-- cadastro -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layManager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <!-- Título -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:text="@string/titlePage2"
        android:textColor="@color/black"
        android:fontFamily="@font/russo_one"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Campo: Nome do carro -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/labelNameCar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCarName"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:singleLine="true" />

    </LinearLayout>

    <!-- Campo: Marca do carro -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/labelBrandCar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCarBrand"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:singleLine="true" />
    </LinearLayout>

    <!-- Campo: Placa -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/labelPlateCar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCarPlate"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:singleLine="true" />
    </LinearLayout>

    <!-- Campo: Ano -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/labelYearCar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCarYear"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="numberSigned" />
    </LinearLayout>

    <!-- Campo: Cor -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/labelColorCar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCarColor"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:singleLine="true" />
    </LinearLayout>

    <!-- Campo: Combustível -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/labelFuelCar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/fuel_spinner"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:maxLength="25" />
    </LinearLayout>

    <!-- Campo: Valor FIPE -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/labelFipeValueCar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCarFipeValue"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:inputType="numberSigned" />

    </LinearLayout>

    <!-- Campo: Valor de venda -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/labelCarValue"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCarSaleValue"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="20"/>
    </LinearLayout>

    <!-- Imagem -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_gallery" />

        <Button
            android:id="@+id/btnImageSearch"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="" />
    </FrameLayout>

    <!-- Botão: Salvar -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#0088ff"
        android:text="@string/labelBtnSave"
        android:textColor="@android:color/white"
        app:cornerRadius="10dp" />

    <!-- Botão: Cancelar -->
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#0088ff"
        android:text="@string/labelBtnCancel"
        android:textColor="@android:color/white"
        app:cornerRadius="10dp" />

</LinearLayout>
